prometheus/Thanos/alertmanager/alert-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-headless
  namespace: kube-mon
spec:
  clusterIP: None  # Headless Service
  ports:
    - name: http
      port: 9093
      targetPort: 9093
    - name: cluster
      port: 9094
      targetPort: 9094
  selector:
    app: alertmanager
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alertmanager
  namespace: kube-mon
spec:
  serviceName: alertmanager-headless
  replicas: 3
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
        - name: alertmanager
          image: shixiaochuangk8s/alertmanager:v0.31.0
          args:
            - --config.file=/etc/alertmanager/config.yml
            - --storage.path=/alertmanager
            - --web.listen-address=:9093
            - --cluster.listen-address=[$(POD_IP)]:9094
            - --cluster.advertise-address=$(POD_IP):9094
            - --cluster.peer=alertmanager-0.alertmanager-headless.kube-mon.svc.cluster.local:9094
            - --cluster.peer=alertmanager-1.alertmanager-headless.kube-mon.svc.cluster.local:9094
            - --cluster.peer=alertmanager-2.alertmanager-headless.kube-mon.svc.cluster.local:9094
          ports:
            - name: http
              containerPort: 9093
            - name: cluster
              containerPort: 9094
          volumeMounts:
            # 主配置文件
            - name: alertcfg
              mountPath: /etc/alertmanager/

            # Alertmanager 数据目录
            - name: data
              mountPath: /alertmanager
      volumes:
        # Alertmanager 主配置
        - name: alertcfg
          configMap:
            name:  alert-config

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: nfs-csi
        resources:
          requests:
            storage: 10Gi
